[package]
name = "ac7ion"
version = "0.1.0"
authors = ["OnikenX <OnikenX@pm.me>"]
edition = "2018"

[[bin]]
name = "ac7ion_server"
path = "src/server.rs"

[lib]
crate-type = ["cdylib"]
name = "ac7ion_client"
path = "src/lib.rs"

[dependencies]
egg-mode = { git = 'https://github.com/egg-mode-rs/egg-mode', branch = 'v0.16' }
tokio = {version = "1", features = ["full", "rt-multi-thread"]}
libp2p = "0.37.1"
yansi = "0.5.0"
chrono = "0.4.19"
futures = {version = "0.3.14", features = ["default", "std","alloc"]}
libc = "0.2.93"
static_init = "1.0.1"
once_cell = "1.7.2"
async-std = "1.9.0"
env_logger = "0.8.3"
fstrings = "0.2.4-rc2"
serde = { version = "1.0.125" , features = ["derive"] }
serde_json = "1.0.64"
tokio-native-tls = "0.3.0"
tokio-rustls = "0.22.0"
argh = "0.1.4"
parking_lot = "0.11.1"