[package]
name = "ac7ion"
version = "0.1.0"
authors = ["OnikenX <OnikenX@pm.me>"]
edition = "2018"

## performantique profile.bench
#[profile.bench]
#opt-level = 3
#debug = false
#lto = true
#debug-assertions = false


[[bin]]
name = "ac7ion_server"
path = "src/server.rs"

[lib]
crate-type = ["cdylib"]
name = "ac7ion_client"
path = "src/lib.rs"

[dependencies]
egg-mode = { git = 'https://github.com/egg-mode-rs/egg-mode', branch = 'v0.16' }
tokio = {version = "1", features = ["full", "rt-multi-thread"]}
serde_json = "1.0.64"
chrono = "0.4.19"
futures = {version = "0.3.14", features = ["default", "std","alloc"]}
libc = "0.2.93"
serde = { version = "1.0.125" , features = ["derive"] }
parking_lot = "0.11.1"
yansi = "0.5.0" # colors in terminal :D
rustls = "0.19.1"
